# anim-lib

./: .gitmodules  README.md
animl/: CMakeLists.txt
animl/src/: animl_ik.c  animl_ik.h
sandbox/: CMakeLists.txt
sandbox/src/: sandbox.cpp  sandbox.h
